Weird gap issue resolved

--- a/style.css
+++ b/style.css
@@ -60,6 +60,15 @@ body
 	box-sizing: border-box;
 }
 
+.row 
+{
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  -ms-flex-wrap: wrap; /* IE10 */
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
 /* Add padding BETWEEN each column */
 .row,
 .row > .column 
